--- a/Blink-Cliente/public_html/css/blink.css
+++ b/Blink-Cliente/public_html/css/blink.css
@@ -26,9 +26,9 @@ and open the template in the editor.
     padding: 10px;
     left: 50%;
     top: 25%;
-    width: 260px;
-    margin-left: -130px;
+    width: 250px;
+    margin-left: -135px;
     background-color: #f8f8f8;
-    border: solid #28a54c 2px;
+    border: solid #6f901a 2px;
     border-radius: 4px;
 }
